2005-01-15 11:53  ricpersi

	* aclocal.m4, compile, config.guess, config.sub, configure.ac,
	depcomp, install-sh, ltmain.sh, missing: Version bump.

2005-01-15 11:37  ricpersi

	* AUTHORS, README: Reverted AUTHORS and README.

2005-01-13 22:06  bwalle

	* po/de.po: New version (minor change)

2005-01-13 21:51  bwalle

	* po/de.po, po/hu.po, po/lt.po, po/uk.po, po/xfce4-systemload.pot,
	aclocal.m4, compile, config.guess, config.sub, depcomp, install-sh,
	ltmain.sh, missing, mkinstalldirs: New version

2005-01-13 21:49  bwalle

	* po/ca.gmo, po/de.gmo, po/hu.gmo, po/lt.gmo, po/uk.gmo,
	panel-plugin/Makefile.in, Makefile.in, configure: Removed generated
	files

2005-01-13 21:47  bwalle

	* ChangeLog, configure.ac, po/ca.po: New version

2005-01-13 21:47  bwalle

	* AUTHORS, README: Chaned maintainer name to me

2005-01-13 21:47  bwalle

	* panel-plugin/systemload.c: Decreased size for Xfce 4.2

2004-07-28 23:49  benny

	* m4/depends.m4: Fix BM_DEPEND_CHECK().

2004-07-24 19:30  benny

	* m4/depends.m4: Correct min. required panel version.

2004-07-24 19:27  benny

	* m4/depends.m4: Extended XFCE_PANEL_PLUGIN macro to honor the new
	threaded panel.

2004-07-21 11:00  benny

	* m4/depends.m4: New panel plugin check

2003-11-14 08:05  huysmans

	* po/ca.gmo: missing gmo file

2003-11-13 20:11  ricpersi

	* ChangeLog, Makefile.in, aclocal.m4, config.guess, config.sub,
	configure, configure.ac, depcomp, install-sh, ltmain.sh,
	panel-plugin/Makefile.in, panel-plugin/uptime.c: Version bump, plus
	one fix for FreeBSD spotted out by Michelle
	<shadoe@shadoegrounds.com>.

2003-11-11 10:47  benny

	* panel-plugin/cpu.c: NetBSD/FreeBSD/OpenBSD 64bit fixes: int ->
	size_t with sysctl(3) lengths, thanks to martti.

2003-11-06 01:39  benny

	* panel-plugin/memswap.c: NetBSD 2.0/-current fixes.

2003-11-03 18:40  huysmans

	* aclocal.m4, configure, configure.ac, po/de.gmo, po/uk.gmo,
	po/uk.po: Add Ukranian translations

2003-10-28 20:01  ricpersi

	* ChangeLog: Update ChangeLog.
