@@ -1,3 +1,8 @@
+2007-01-05 Mike Massonnet
+
+	* panel-plugin/systemload.c(monitor_create_options): use xfce titled
+	  dialog for the options.
+
 2005-01-15 11:53  ricpersi
 
 	* aclocal.m4, compile, config.guess, config.sub, configure.ac,
